Tried to fix wrong position of logo-section

--- a/html/pages/search/search.css
+++ b/html/pages/search/search.css
@@ -2,10 +2,6 @@
   transform: scale(0.95);
 }
 
-.header-avatar-container {
-  margin-top: -10px;
-}
-
 .header-section {
   margin-bottom: 15px;
 }
